Se agregaron nuevas recetas y se corrigiron varios errores ortograficos.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1>Recetas de Odin</h1>
-  <a href="recipes/pizza.html">Receta Pizza Margarita</a>
+  <ul>
+    <li><a href="recipes/pizza.html">Receta Pizza Margarita</a></li>
+    <li><a href="recipes/croquetas.html">Receta Croquetas de papas</a></li>
+    <li><a href="recipes/batido.html">Receta Batido de Sandia</a> </li>   
+  </ul>
 </body>
 </html>
