--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <!-- TODO: Se agrego el titulo de la pag. -->
+  <title>Receta pizza margarita</title>
 </head>
 <body>
   <h1>Receta pizza margarita</h1>
-  <img src="./pizza.jpg">
+  <img src="./pizza.jpg" height="310" width="310">
 
-<h2>Descripción</h2>
+<h3>Descripción:</h3>
 
 <p>Si hablamos de la madre de todas las pizzas, la pizza de entre todas 
-las pizzas, tenemos que hablar de pizza Margarita o Margherita.</p>
-
-<p>Este tipo de pizza italiana esta formada por una masa de pizza napolitana 
-como base y acompañada por 6 ingredientes solamente. Tan sencillo como un 
-pocode tomate, queso mozzarella, albahaca fresca, sal, pimienta negra recién 
+las pizzas, tenemos que hablar de pizza Margarita o Margherita. Este tipo 
+de pizza italiana esta formada por una masa de pizza napolitana como base 
+y acompañada por 6 ingredientes solamente. Tan sencillo como un poco de 
+tomate,queso mozzarella, albahaca fresca, sal, pimienta negra recién  
 molida y aceite de oliva virgen extra. Es sin duda la pizza napolitana más 
-popular.</p> 
+popular. </p>
 
 
-<h3>Ingredientes</h3>
+
+
+<h3>Ingredientes:</h3>
   <ul>
       <li>220 g. de masa de pizza italiana.</li>
       <li>90 g. de queso mozzarella.</li>
@@ -32,7 +34,7 @@ popular.</p>
       <li>Aceite de oliva virgen extra.</li>
   </ul>
 
-<h3>Pasos</h3>
+<h3>Pasos:</h3>
   <ol>
     <li>Preparar la masa de la pizza.</li>
     <li>Encender el horno hasta alcanzar los 250º C durante unos 10 minutos.</li>
