Corrección de errores y eliminación de imágenes

--- a/recipes/batido.html
+++ b/recipes/batido.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Receta batido de sandia</h1>
-    <img src="./batido.jpg" width="310" height="310">
+    <img src="../img/batido.jpg" width="310" height="310">
 
     <h3>Descripción:</h3>
 
