--- a/recipes/croquetas.html
+++ b/recipes/croquetas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Receta croquetas de papas</h1>
-  <img src="./croquetas.jpeg" height="310" width="310">
+  <img src="../img/croquetas.jpeg" height="310" width="310">
 
   <h3>Descripción:</h3>
 
