--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <h1>Receta pizza margarita</h1>
-  <img src="./pizza.jpg" height="310" width="310">
+  <img src="../img/pizza.jpg" height="310" width="310">
 
-<h3>Descripción:</h3>
+<h3>Descripción:</h3> 
 
 <p>Si hablamos de la madre de todas las pizzas, la pizza de entre todas 
 las pizzas, tenemos que hablar de pizza Margarita o Margherita. Este tipo 
@@ -19,8 +19,6 @@ y acompañada por 6 ingredientes solamente. Tan sencillo como un poco de
 tomate,queso mozzarella, albahaca fresca, sal, pimienta negra recién  
 molida y aceite de oliva virgen extra. Es sin duda la pizza napolitana más 
 popular. </p>
-
-
 
 
 <h3>Ingredientes:</h3>
